<resources>
    <string name="app_name">NadaltResortCloud</string>
    <string name="title">Nadalt Resort Cloud</string>
    <string name="login">Log In</string>
    <string name="register">Don"'"t Have An Account? Register Now!</string>
    <string name="registerTitle">Register</string>
    <string name="email">Email: </string>
    <string name="emailEdit">Enter Your Email</string>
    <string name="password">Password: </string>
    <string name="passwordEdit">Enter Your Password</string>
    <string name="choose">Choose Profile Picture</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="finish">Finish</string>
    <string name="welcomeTitle">Welcome!</string>
    <string name="fstNameTxtView">First Name: </string>
    <string name="fstNameEditTxt">Enter First Name</string>
    <string name="lstNameTxtView">Last Name: </string>
    <string name="lstNameEditTxt">Enter Last Name</string>
    <string name="dateOfBirth">Date Of Birth (Press Here)</string>
    <string name="addToCart">Make A New Order</string>
    <string name="orderHistory">My Order History</string>
    <string name="myProfile">My Profile</string>
    <string name="logout">logout</string>
    <string name="editProfile">Edit Profile</string>
    <string name="save">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="newOrderTitle">Make A New Order</string>
    <string name="orderDate">Choose Date</string>
    <string name="numOFguests">Guests Amount</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="update">Update User</string>
    <string name="firstPrice">10,000$</string>
    <string name="phone">Phone:</string>
    <string name="phoneEdit">Enter Phone</string>
    <string name="historyTitle">Order History</string>
    <string name="roomType">Room Type</string>
    <string name="roomPrice">Room Price</string>
    <string name="dateShow">Date Of Order</string>
    <string name="orderShowTitle">Order Information</string>
    <string name="presidentialDes">This unique Suite features a master bedroom with upscale furnishing and a luxurious bathroom equipped with a Jacuzzi bathtub, separate Jet shower cabin and WC, a second bedroom with joined twin beds, a sitting area and a spacious and comfortable living room with an impressive décor.</string>
</resources>
