<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/menu"
        app:showAsAction="always">
    <menu>
        <item
            android:id="@+id/idNewOrder"
            android:title="@string/newOrderTitle"
            android:icon="@drawable/add_to_basket_bl"
            />
        <item
            android:id="@+id/idOrderHis"
            android:title="@string/orderHistory"
            android:icon="@drawable/order_history_bl"/>
        <item
            android:id="@+id/idMyProfile"
            android:title="@string/myProfile"
            android:icon="@drawable/my_profile_bl"/>
        <item
            android:id="@+id/idLogout"
            android:title="@string/logout"
            android:icon="@drawable/logout_bl"/>
    </menu>
    </item>
</menu>