<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/simple_background"
    tools:context=".Register">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:fontFamily="@font/calligraffitti"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:text="@string/registerTitle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fstNameTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/fstNameTxtView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fstNameEditTxt"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/fstNameEditTxt"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:textColorHint="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lstNameTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/lstNameTxtView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lstNameEditTxt"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/lstNameEditTxt"
                android:inputType="textPersonName"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/emailEdit"
                android:inputType="textEmailAddress"
                android:textSize="20sp"

                android:textColorHint="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/password"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/passwordEdit"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColorHint="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/phone"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/phoneEdit"
                android:inputType="phone"
                android:textSize="20sp"
                android:textColorHint="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                tools:srcCompat="@drawable/profile" />

            <Button
                android:id="@+id/choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/blankColor"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/choose"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rdgb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/maleRadiob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/male"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/femaleRadiob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/female"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/blankColor"
        android:fontFamily="@font/calligraffitti"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/dateOfBirth" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/blankColor"
        android:fontFamily="@font/calligraffitti"
        android:text="@string/finish"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>