<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/simple_background"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:fontFamily="@font/calligraffitti"
        android:text="@string/editProfile" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fstNameTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/fstNameTxtView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fstNameEdit"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/fstNameEditTxt"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:textColorHint="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lstNameTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/lstNameTxtView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lstNameEdit"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/lstNameEditTxt"
                android:inputType="textPersonName"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/phone"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phoneEdit"
                android:inputType="phone"
                android:textSize="20sp"
                android:textColorHint="@android:color/white" />

        </LinearLayout>





    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewEdit"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                tools:srcCompat="@drawable/profile" />

            <Button
                android:id="@+id/profileImgEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/blankColor"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/choose"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rdgpEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/maleBtnEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/male"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/femaleBtnEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/female"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/dateBtnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@color/blankColor"
        android:fontFamily="@font/calligraffitti"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/dateOfBirth" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/blankColor"
            android:fontFamily="@font/calligraffitti"
            android:text="@string/save" />

        <Button
            android:id="@+id/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/blankColor"
            android:fontFamily="@font/calligraffitti"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>