<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nadalt_resort_backg"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/calligraffitti"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/blankColor"
        android:layout_marginTop="380dp"
        android:fontFamily="@font/calligraffitti"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/login" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/blankColor"
        android:fontFamily="@font/calligraffitti"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:text="@string/register" />
</LinearLayout>