<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple_background"
    android:orientation="vertical"
    tools:context=".NewOrder">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/newOrderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/newOrderTitle"
                android:textColor="@android:color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/orderDateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@color/blankColor"
                    android:fontFamily="@font/calligraffitti"
                    android:text="@string/orderDate"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/numOfGuests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/calligraffitti"
                    android:text="@string/numOFguests"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/plusButton"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:background="@color/blankColor"
                        android:fontFamily="@font/calligraffitti"
                        android:text="@string/plus"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/amountText"
                        android:layout_width="26dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/calligraffitti"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/minusButton"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:background="@color/blankColor"
                        android:fontFamily="@font/calligraffitti"
                        android:text="@string/minus"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <Spinner
                android:id="@+id/roomSpn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/calligraffitti"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/roomImage"
                android:layout_width="260dp"
                android:layout_height="170dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/presidential_suite" />

            <TextView
                android:id="@+id/roomPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/calligraffitti"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:text="@string/firstPrice" />

            <TextView
                android:id="@+id/roomInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/presidentialDes"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="15dp"
                android:layout_margin="10dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/orderFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/blankColor"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/finish"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>